Fix message wrapping

--- a/Code/UI/Chat/Chatbox.razor.scss
+++ b/Code/UI/Chat/Chatbox.razor.scss
@@ -9,7 +9,7 @@ p {
 }
 
 .rainbow {
-    > .name {
+    >> .name {
         animation-name: rainbowcycle;
         animation-duration: 4s;
         animation-iteration-count: infinite;
@@ -145,17 +145,13 @@ ChatEntry {
         text-shadow: 0 0 4px black;
     }
 
-    .name {
-        padding-left: 4px;
-        padding-right: 5px;
-        flex-shrink: 0;
-        align-self: center;
-        max-width: 150px;
-        color: #ccf45a;
-    }
-
     .message-content {
+        .name {
+            position: absolute;
+            color: #ccf45a;
+        }
         .message {
+            white-space: pre;
         }
     }
 
